--- a/kubernetes/deployment-prod.yaml
+++ b/kubernetes/deployment-prod.yaml
@@ -22,6 +22,6 @@ spec:
                     requests:
                         memory: 160Mi
                     limits:
-                        memory: 256Mi
+                        memory: 1Gi
             imagePullSecrets:
               - name: github-container-registry
